--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,70 +82,70 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="SELECTION SORT"
+                android:text="INSERTION SORT"
 
                 />
 
             <Button
-                android:id="@+id/btn2"
+                android:id="@+id/btn_shell_sort"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="SELECTION SORT"
+                android:text="SHELL SORT"
 
                 />
 
             <Button
-                android:id="@+id/btn3"
+                android:id="@+id/btn_quick_sort"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="SELECTION SORT"
+                android:text="QUICK SORT"
 
                 />
 
             <Button
-                android:id="@+id/btn4"
+                android:id="@+id/btn_counting_sort"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="SELECTION SORT"
+                android:text="COUNTING SORT"
 
                 />
 
             <Button
-                android:id="@+id/btn5"
+                android:id="@+id/btn_heap_sort"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="SELECTION SORT"
+                android:text="HEAP SORT"
 
                 />
 
             <Button
-                android:id="@+id/btn6"
+                android:id="@+id/btn_bucket_sort"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="SELECTION SORT"
+                android:text="BUCKET SORT"
 
                 />
 
-            <Button
-                android:id="@+id/btn7"
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="SELECTION SORT"
+                android:layout_height="1dp"
+                android:background="@color/black"
 
+                android:layout_marginVertical="10dp"
                 />
 
             <Button
-                android:id="@+id/btn8"
+                android:id="@+id/btn_to_explore"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="SELECTION SORT"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginVertical="30dp"
+                android:text="탐색 알고리즘으로"
 
                 />
 
