--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -158,7 +158,7 @@
                 />
 
             <Button
-                android:id="@+id/btn_to_explore"
+                android:id="@+id/btn_to_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
